feat: add EXIF orientation utilities and tests
- Add exifOrientation.ts with getExifOrientation and correctImageOrientation functions
- Add comprehensive test suite for EXIF orientation handling
- Add EXIF_README.md documenting EXIF orientation values and usage
- Update ApiAdapter, IApiPort, PhotoConfirmation tests, appStore
- Update Dockerfile and vite.config.ts configuration

Note: EXIF utilities not yet integrated (see decision-record.md for rationale)

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,6 +4,10 @@ FROM node:20-alpine AS builder
 
 WORKDIR /app
 
+# Build argument for API URL (used at build time)
+ARG PUBLIC_API_URL=http://localhost:8080
+ENV PUBLIC_API_URL=${PUBLIC_API_URL}
+
 # Copy package files
 COPY package*.json ./
 
