Improve graceful shutdown handling
- Add context-based cancellation for cleanup goroutine
- Ensure cleanup job stops before server shutdown completes
- Add stop_grace_period to docker-compose for proper shutdown
- Fix import ordering in main.go

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       timeout: 3s
       retries: 3
       start_period: 5s
+    stop_grace_period: 35s
     restart: unless-stopped
     networks:
       - rechtebank-network
