Add automated VM deployment with GitHub Actions and Traefik integration
- Add GitHub Actions workflow for SSH-based deployment to production VM
- Create docker-compose.prod.yml overlay for Traefik reverse proxy integration
- Update docker-compose.yml to support both local dev and production configs
- Configure environment variables for production deployment
- Document deployment process, GitHub Secrets requirements, and rollback procedures
- Add OpenSpec change artifacts for vm-deployment-github-actions

--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,11 @@ PORT=8080
 # CORS Configuration (frontend domain)
 CORS_ORIGIN=http://localhost:5173
 
-# Environment
+# Environment (development or production)
 ENV=development
+
+# Frontend Build Configuration
+PUBLIC_API_URL=http://localhost:8080
+
+# Production Domain (for Traefik routing)
+# DOMAIN=rechtbank.example.com
