--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,8 @@ services:
         - PUBLIC_API_URL=http://localhost:8080
     ports:
       - "5173:80"
+    environment:
+      - PUBLIC_API_URL=http://localhost:8080
     depends_on:
       backend:
         condition: service_healthy
