--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,19 +1,16 @@
 version: "3.8"
 
 services:
-  backend:
-    ports: !reset [] # Remove all port mappings for production
-
   frontend:
-    ports: !reset [] # Remove all port mappings for production
     networks:
       - rechtebank-network
       - proxy
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.rechtbank.rule=Host(`${DOMAIN}`)"
+      - 'traefik.http.routers.rechtbank.rule=Host("${DOMAIN}")'
       - "traefik.http.routers.rechtbank.tls=true"
       - "traefik.http.routers.rechtbank.tls.certresolver=lets-encrypt"
+      - "traefik.http.services.rechtbank.loadbalancer.server.port=80"
       - "traefik.docker.network=proxy"
 
 networks:
