Rebrand verdict route to /vonnis/ for Dutch audience
- Rename /verdict/[id] route to /vonnis/[id] as canonical route
- Add nginx 301 redirect from legacy /verdict/ URLs to /vonnis/
- Update share functionality to generate /vonnis/ URLs
- Add Open Graph meta tags for shareable verdict pages
- Document nginx rewrite behavior in README
- Remove completed 'rename route' idea from ideas.md

This maintains backward compatibility while introducing proper Dutch terminology.

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -52,6 +52,12 @@ http {
 
         # SPA routing - serve index.html for all routes
         location / {
+            # Redirect legacy /verdict/ URLs to /vonnis/ for backward compatibility
+            # This allows old shared links to continue working while new shares use /vonnis/
+            if ($request_uri ~ ^/verdict/(.*)$) {
+                return 301 $scheme://$http_host/vonnis/$1;
+            }
+            
             try_files $uri $uri/ /index.html;
             
             # Cache control for HTML files - no cache
